Customer-Driver Chatting Added

--- a/Customer/app/src/main/AndroidManifest.xml
+++ b/Customer/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".GoRideActivity"></activity>
+        <activity android:name=".GoRideActivity" />
+        <activity android:name=".OrderActivity" />
+        <activity android:name=".ChatActivity"></activity>
     </application>
 
 </manifest>
