--- a/Customer/app/src/main/AndroidManifest.xml
+++ b/Customer/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         <activity android:name=".GoRideActivity" />
         <activity android:name=".OrderActivity" />
         <activity android:name=".ChatActivity" />
-        <activity android:name=".GoCarActivity"></activity>
+        <activity android:name=".GoCarActivity" />
+        <activity android:name=".GoFoodActivity" />
+        <activity android:name=".RestoActivity" />
+        <activity android:name=".ReviewActivity"></activity>
     </application>
 
 </manifest>
