--- a/Restaurant/app/src/main/AndroidManifest.xml
+++ b/Restaurant/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" />
+        <activity
+            android:label="Register" android:name=".RegisterActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
+            android:label="Main Menu"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
